Normalized method for dynamic getters. BREAKING CHANGE: defaults() should now be static.

--- a/help/README.html
+++ b/help/README.html
@@ -85,7 +85,7 @@ $render = $obj-&gt;build();
  */
 class ListOfThumbsRenderPattern extends RenderPatternsPattern {
 
-  public function defaults() {
+  public static function defaults() {
     return array(
       'images' =&gt; array(),
       'style' =&gt; 'thumb',
