--- a/help/README.html
+++ b/help/README.html
@@ -3,9 +3,7 @@
 
 <h2>Summary</h2>
 
-<p><strong>It's like tpl files for render arrays.</strong></p>
-
-<p>When building a site, if you find yourself rewriting the same combination of render arrays, say a repeating combination of several theme functions, (I would say) you are doing it wrong.  This module is inspired by component based design and handles these patterns in easy-to-use php classes, one per file, that are simply added to your module or theme, in a specified folder`.  For me it has had the effect of <em>taming the render array</em> in my Drupal projects.</p>
+<p>The <em>Render Patterns</em> module allows you to encapsulate Drupal render arrays as class objects, for repetitive use.  You expose only the dynamic elements of your render array as class properties, and the rest of the render array is hidden within the black box of the render pattern class.  This type of design makes sense if you need to reference the same render array in more than one place as it avoids errors caused by code duplication.  It comes from the <a href="https://en.wikipedia.org/wiki/Don%27t_repeat_yourself">DRY principle</a>.</p>
 
 <p>You may also visit the <a href="http://www.drupal.org/project/render_patterns">project page</a> on Drupal.org.</p>
 
