Ready for next rc.

--- a/help/display_suite.html
+++ b/help/display_suite.html
@@ -1,4 +1,6 @@
 
+<p><strong>This has not been ported to 8.x branch yet.</strong></p>
+
 <p>If you model your render pattern after a display suite layout and then implement the pattern in the layout tpl as seen below, you have the ultimate flexibility as you can programatically use the display suite layout very easily.</p>
 
 <p>This example implements the display suite layout in the theme and we use these files for the complete solution.</p>
