--- a/help/validation.html
+++ b/help/validation.html
@@ -20,3 +20,29 @@
     ],
   ];
 </code></pre>
+
+<h2><code>description</code> not comments</h2>
+
+<p>Instead of commenting your code, add a <code>description</code> key to make a property note or descriptio.</p>
+
+<p>Wrong:</p>
+
+<pre><code>protected $properties = [
+  // Leave this null if the first batch is already loaded. For autoclick loading, set this to an integer total number to load.  The caller should most likely be checking $_GET for this value!!!
+  'load' =&gt; [
+    'type' =&gt; ['null', 'integer'],
+    'default' =&gt; NULL,
+  ],
+];
+</code></pre>
+
+<p>Right:</p>
+
+<pre><code>protected $properties = [
+  'load' =&gt; [
+    'description' =&gt; 'Leave this null if the first batch is already loaded. For autoclick loading, set this to an integer total number to load.  The caller should most likely be checking $_GET for this value!!!',
+    'type' =&gt; ['null', 'integer'],
+    'default' =&gt; NULL,
+  ],
+];
+</code></pre>
