--- a/help/CHANGELOG.html
+++ b/help/CHANGELOG.html
@@ -1,4 +1,12 @@
 
+<h2>[8.x-2.1] - 2021-03-26</h2>
+
+<h3>Added</h3>
+
+<ul>
+<li>Support for validation of objects by FQN.  See docs for usage example.</li>
+</ul>
+
 <h2>[8.x-2.0] - 2020-02-14</h2>
 
 <h3>Changed</h3>
