--- a/help/arrays.html
+++ b/help/arrays.html
@@ -3,24 +3,24 @@
 
 <h2>The problem: This will not work</h2>
 
-<pre><code>$obj = render_patterns_get("ListOfThumbs");
+<pre><code>$obj = \Drupal\render_patterns\Pattern\ListOfThumbs::get();
 $obj-&gt;images[] = 'public://do.jpg';
 $obj-&gt;images[] = 'public://re.jpg';
 </code></pre>
 
 <h2>Solution 1</h2>
 
-<pre><code>$obj = render_patterns_get("ListOfThumbs");
-$obj-&gt;images = array(
+<pre><code>$obj = \Drupal\render_patterns\Pattern\ListOfThumbs::get();
+$obj-&gt;images = [
   'public://do.jpg',
   'public://re.jpg',
-);
+];
 </code></pre>
 
 <h2>Solution 2</h2>
 
-<pre><code>$obj = render_patterns_get("ListOfThumbs");
-$images = array();
+<pre><code>$obj = \Drupal\render_patterns\Pattern\ListOfThumbs::get();
+$images = [];
 $images[] = 'public://do.jpg';
 $images[] = 'public://re.jpg';
 $obj-&gt;images = $images;
