--- a/help/CHANGELOG.html
+++ b/help/CHANGELOG.html
@@ -8,6 +8,7 @@
 <li>The <code>::get()</code> method to replace <code>render_patterns_get()</code>.</li>
 <li>Invalidate <code>\Drupal::cache('bootstrap')-&gt;get('render_patterns_list')</code> when
 default theme changes.</li>
+<li>Composer-based dependencies. See <em>README.md</em> for adding to your app-level <em>composer.json</em> for dependencies.</li>
 </ul>
 
 <h3>Changed</h3>
