--- a/help/services.html
+++ b/help/services.html
@@ -6,7 +6,7 @@
 <li>Declare <code>private</code> class variables.</li>
 </ol>
 
-<pre><code class="php">namespace Drupal\render_patterns\Pattern;
+<pre><code class="php">namespace Drupal\my_theme\RenderPatterns\;
 
 final class LibraryFacets extends Pattern implements \Drupal\Core\DependencyInjection\ContainerInjectionInterface {
 
