--- a/help/README.html
+++ b/help/README.html
@@ -10,19 +10,18 @@
 <h2>Installation</h2>
 
 <ol>
-<li>Download this module to <em>web/modules/custom/render_patterns</em>.</li>
 <li><p>Add the following to the application's <em>composer.json</em> above web root.</p>
 
 <pre><code class="json">{
   "repositories": [
     {
-      "type": "path",
-      "url": "web/modules/custom/render_patterns"
+      "type": "github",
+      "url": "https://github.com/aklump/drupal_render_patterns"
     }
   ]
 }
 </code></pre></li>
-<li><p>Now run <code>composer require drupal/render-patterns</code></p></li>
+<li><p>Now run <code>composer require aklump_drupal/render_patterns</code></p></li>
 <li>Enable this module.</li>
 <li>Begin creating one or more render patterns in <em>{active theme}/src/RenderPatterns/</em>.  (You may also provide classes in a module by adjusting the namespace to the module.)</li>
 <li>Use namespace <code>\Drupal\my_theme\src\RenderPatterns</code> for the classes.</li>
